--- a/Resources/CSS/style.css
+++ b/Resources/CSS/style.css
@@ -11,15 +11,17 @@
     --Light-Violet: hsl(264, 100%, 61%);
     /*Secondary*/
     --White: hsl(0, 0%, 100%);
+    --ui-heading: hsl(276, 100%, 81%);
     --Light-Gray-Violet: hsl(270, 20%, 96%);
     --Dark-Violet: hsl(271, 36%, 24%);
     --Light-Magenta: hsl(289, 100%, 72%);
     /*Chat Bubbles*/
     --grey-chat-bubble: hsla(291, 22%, 83%, 0.354);
     --box-shadow: rgba(204, 204, 204, 0.467);
-    --gray-chat-text-color: hsl(296, 50%, 47%);
+    --gray-chat-text-color: hsl(276, 55%, 52%);
+    --placeholder: hsl(206, 6%, 79%);
     /*Paragraph text color*/
-    --paragraph-color: hsla(300, 2%, 35%, 0.461);
+    --paragraph-color: hsl(270, 7%, 64%);
 }
 body{
     display: flex;
@@ -31,26 +33,25 @@ body{
 .background-pattern{
     display: flex;
     top: 0;
-    left: 0;
+    left: -10rem;
     z-index: -1;
-    min-width: 50%;
-    max-width: 50%;
+    width: 25rem;
     height: 30rem;
-    position: absolute;
+    position: fixed;
     background: linear-gradient(hsl(284, 80%, 61%), hsl(274, 100%, 61%), hsl(264, 100%, 61%) 100%);
     border-radius: 0 0 300px 0px;   
 }
 .background-pattern2{
     display: flex;
-    height: 29rem;
-    min-width: 35%;
-    max-width: 50%;
-    right: 0;
+    height: 17rem;
+    width: 25rem;
+    bottom: 0;
+    right: -10rem;
     margin-top: 25rem;
-    position: absolute;
+    position: fixed;
     z-index: -3;
-    border-radius: 300px 0 0 0;
-    background:rgba(214, 214, 214, 0.29)
+    border-radius: 250px 0 0 0;
+    background:rgba(214, 214, 214, 0.29);
 }
 
 /*mobile app header section */
@@ -80,7 +81,7 @@ main{
     font-size: 0.4rem;
     line-height: 9px;
     font-weight: 300;
-    color: var(--Light-Gray-Violet);
+    color: var(--ui-heading);
 }
 .app-head p{
     line-height: 3px;
@@ -209,7 +210,7 @@ main{
     margin-left: 0.3rem;
     margin-top: 0.3rem;
     margin-right: 4.5rem;
-    color: rgba(142, 142, 142, 0.362);
+    color: var(--placeholder);
 }
 .enter-button{
     display: flex;
@@ -253,7 +254,7 @@ main{
         flex-direction: row;
         align-items: none;
         justify-content: flex-start;
-        margin-left: 27.5rem;
+        margin-left: 8rem;
         height: 100vh;
     }
     main{
@@ -268,17 +269,26 @@ main{
     .text-section h1{
         padding: 0 3rem;
     }
+    .text-section p{
+        font-size: 0.9rem;
+        line-height: 1.5rem;
+    }
     .background-pattern{
-        width: 35%;
-        min-width: auto;
-        border-radius: 0 0 300px 300px;
+        width: 34rem;
         height: 37rem;
+        border-radius: 0 0 325px 325px;
+        left: -8rem;
+        
     }
     .background-pattern2{
-        height: 40rem;
-        margin-top: 7rem;
-        min-width: auto;
-        width: 30rem;
+        height: 37rem;
+        width: 34rem;
         border-radius: 300px 300px 0 0;
+        right: -8rem
+    }
+}
+@media only screen and (min-width:1177px){
+    main{
+        margin-left: 14rem;
     }
 }
